--- a/public/mapbox.html
+++ b/public/mapbox.html
@@ -28,7 +28,9 @@
       container: 'map',
       style: 'mapbox://styles/ryanctan/cjzufpgfi06m31ckelh8owks3', // replace this with your style URL
       center: [12.5674, 41.8719],
-      zoom: 4.8
+      zoom: 4.8,
+      minZoom: 4.8,
+      maxBounds: [[-2.5674, 32.8719], [26.5674, 50.8719]]
     });
     // code from the next step will go here
     map.on('click', function(e) {
@@ -45,7 +47,7 @@
 
     var popup = new mapboxgl.Popup({ offset: [0, -15] })
         .setLngLat(feature.geometry.coordinates)
-        .setHTML('<h3>' + feature.properties.place + '</h3>')
+        .setHTML('<h4>' + feature.properties.place + '</h4>')
         .addTo(map);
     });
     </script>
